objects/Client_On_Boarding__c.object
<CustomObject>
    <fields>
        <fullName>Banker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banker Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_On_Boarding1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_On_Boarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DAY 1 TEMPLATE</fullName>
                </value>
                <value>
                    <fullName>Exemption 4</fullName>
                </value>
                <value>
                    <fullName>Client Introductory Certificate (CIC)</fullName>
                </value>
                <value>
                    <fullName>Syndicated Loan</fullName>
                </value>
                <value>
                    <fullName>Group Introductory Certificate</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Additional product</fullName>
                </value>
                <value>
                    <fullName>Refresh FICA documents/ Trigger event</fullName>
                </value>
                <value>
                    <fullName>Closure of account</fullName>
                </value>
                <value>
                    <fullName>Migration in</fullName>
                </value>
                <value>
                    <fullName>Migration out</fullName>
                </value>
                <value>
                    <fullName>Update Resolution</fullName>
                </value>
                <value>
                    <fullName>Update Product mandate</fullName>
                </value>
                <value>
                    <fullName>Annual Refresh</fullName>
                </value>
                <value>
                    <fullName>PEP</fullName>
                </value>
                <value>
                    <fullName>Entire Relationship</fullName>
                </value>
                <value>
                    <fullName>An Account Keep Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The contact person that will be handing the on-boarding process</inlineHelpText>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client On-Boarding</relationshipLabel>
        <relationshipName>Client_On_Boarding</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESP_ID__c</fullName>
        <description>This ID is captured by the On-boarding Manger once the Client has been loaded on ESP.
This will help with matching back to ESP accounts</description>
        <label>ESP ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On_Boarding_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Boarding Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_On_Boarding3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_On_Boarding2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client On-Boarding (Relationship Name)</relationshipLabel>
        <relationshipName>Client_On_Boarding</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Department__c</fullName>
        <label>Responsible Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New to Bank</fullName>
                    <default>true</default>
                    <label>New to Bank</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Mandates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New to bank on-boarding (NTB)</fullName>
                    <default>true</default>
                    <label>New to bank on-boarding (NTB)</label>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client On-Boarding</label>
    <listViews>
        <fullName>Client_On_Boarding</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Priority__c</columns>
        <columns>On_Boarding_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Client On-Boarding</label>
    </listViews>
    <listViews>
        <fullName>My_Client_On_Boarding</fullName>
        <columns>NAME</columns>
        <columns>Relationship_Name__c</columns>
        <columns>Responsible_Department__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Banker_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CSM_Name__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>On_Boarding_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Product_Partner__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Client On-Boarding</label>
    </listViews>
    <nameField>
        <displayFormat>ONB{00000}</displayFormat>
        <label>On-Boarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client On-Boarding</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>